<resources>
    <string name="mozo_format_date">MMM d, yyyy</string>
    <string name="mozo_format_date_time">HH:mm MMM d, yyyy</string>
    <string name="mozo_contact_format_date_time" translatable="false">MMM dd, yyyy - HH:mm</string>
    <string name="mozo_address_book_title">Address Book</string>
    <string name="mozo_address_book_pick_title">Select Address</string>
    <string name="mozo_address_book_pick_btn">Select from Address Book</string>
    <string name="mozo_address_book_no_result">Results not found</string>
    <string name="mozo_address_book_search_hint">Search Address</string>
    <string name="mozo_address_book_tab_user">User Address</string>
    <string name="mozo_address_book_tab_store">Store Address</string>
    <string name="mozo_address_add_label">Wallet Address</string>
    <string name="mozo_address_add_input_name_label">Name</string>
    <string name="mozo_address_add_input_name_hint">Enter Contact Name</string>
    <string name="mozo_address_add_msg_saved">Address Saved</string>
    <string name="mozo_address_add_msg_error">This address already exists in your Address Book</string>
    <string name="mozo_address_update_msg">Quickly add friends to Mozo Address Book from the phone book</string>
    <string name="mozo_address_import_title">Synchronize Contacts</string>
    <string name="mozo_address_import_msg">Friends in your contact list will automatically be added to Mozo Address Book.</string>
    <string name="mozo_address_import_last_updated">Last updated:</string>
    <string name="mozo_address_require_permission">To synchronize your contacts with Mozo Address Book, any existing contact will be overwritten by Mozo Address Book.</string>
    <string name="mozo_address_require_permission_title">Mozo would like to access your Contact Book</string>
    <string name="mozo_address_require_permission_force">You must give Mozo permission to access the Contact Book first</string>
    <string name="mozo_address_require_permission_force_title">Cannot access your Contact Book</string>
    <string name="mozo_address_msg_not_import">Not yet synchronized</string>
    <string name="mozo_address_msg_import_success">Synchronize Contacts successful!</string>
    <string name="mozo_address_msg_no_contact">Cannot synchronize, your Contact Book is empty.</string>
    <string name="mozo_dialog_loading_msg">Creating Interface</string>
    <string name="mozo_dialog_copied_msg">Copied to clipboard</string>
    <string name="mozo_dialog_error_network_msg">No internet connection</string>
    <string name="mozo_dialog_error_network_msg_sub">Once you have a stronger internet connection, we’ll automatically process your request.</string>
    <string name="mozo_dialog_error_timeout_msg">Time out, please try again.</string>
    <string name="mozo_dialog_error_scan_invalid_msg">Scanned value is invalid.</string>
    <string name="mozo_dialog_error_msg">There is an error occurred.</string>
    <string name="mozo_dialog_error_not_enough_msg">Your balance is not insufficient for this transfer amount.</string>
    <string name="mozo_dialog_error_system_time_msg">The time on your device is incorrect.</string>
    <string name="mozo_dialog_error_system_time_msg_sub">Please update the date and time, then try again.</string>
    <string name="mozo_dialog_del_account_confirm_title">Are you sure you want to delete your whole account?</string>
    <string name="mozo_dialog_del_account_confirm_msg">You’ll lose everything, your Mozo wallet including the token, purchased vouchers, friend list, liked and shared forever.</string>
    <string name="mozo_dialog_del_account_remind_title">Your account has been scheduled for deletion.</string>
    <string name="mozo_dialog_del_account_remind_msg">Please login with in the <b>next 30 days</b> to cancel the schedule.</string>
    <string name="mozo_button_deposit">Deposit</string>
    <string name="mozo_button_login">Sign In to Mozo</string>
    <string name="mozo_button_logout">Log Out Mozo</string>
    <string name="mozo_button_logout_short">Log Out</string>
    <string name="mozo_button_close_app">Close App</string>
    <string name="mozo_button_send_mozo">Send Mozo</string>
    <string name="mozo_button_transfer">Send</string>
    <string name="mozo_button_transaction_history">Transaction History</string>
    <string name="mozo_button_request">Request</string>
    <string name="mozo_button_offchain_wallet">Offchain Wallet</string>
    <string name="mozo_button_onchain_wallets">Onchain Wallets</string>
    <string name="mozo_button_onchain_how_to_buy">How to add MozoX?</string>
    <string name="mozo_button_onchain_tx_history">Go to <b>Etherscan.io</b></string>
    <string name="mozo_button_onchain_convert">Convert to Mozo</string>
    <string name="mozo_button_onchain_converting">Pending transaction…</string>
    <string name="mozo_button_hide_transaction">Hide transaction</string>
    <string name="mozo_button_back_on_chain">Back to Onchain Wallet</string>
    <string name="mozo_button_ok">OK</string>
    <string name="mozo_button_confirm">Confirm</string>
    <string name="mozo_button_restore">Restore</string>
    <string name="mozo_button_back">Back</string>
    <string name="mozo_button_cancel">Cancel</string>
    <string name="mozo_button_copy">Copy</string>
    <string name="mozo_button_continue">Continue</string>
    <string name="mozo_button_close">Close</string>
    <string name="mozo_button_clear">Clear</string>
    <string name="mozo_button_done">Done</string>
    <string name="mozo_button_finish">Finish</string>
    <string name="mozo_button_got_it">Got It</string>
    <string name="mozo_button_scan_qr_code">Scan QR Code</string>
    <string name="mozo_button_scan">Scan</string>
    <string name="mozo_button_show_qr_code">Enlarge QR Code</string>
    <string name="mozo_button_send">Send</string>
    <string name="mozo_button_save">Save</string>
    <string name="mozo_button_save_address">Save Wallet Address</string>
    <string name="mozo_button_submit">Submit</string>
    <string name="mozo_button_retry">Retry</string>
    <string name="mozo_button_refresh">Refresh</string>
    <string name="mozo_button_read_more">Read more</string>
    <string name="mozo_button_next">Next</string>
    <string name="mozo_button_try_again">Try Again</string>
    <string name="mozo_button_contact_telegram" translatable="false">Telegram</string>
    <string name="mozo_button_contact_kakao" translatable="false">KakaoTalk</string>
    <string name="mozo_button_contact_zalo" translatable="false">Zalo</string>
    <string name="mozo_button_go_to_wallet">Go to Wallet</string>
    <string name="mozo_button_synchronize">Synchronize</string>
    <string name="mozo_button_synchronizing">Synchronizing…</string>
    <string name="mozo_button_update">Update</string>
    <string name="mozo_button_delete_everything">Delete everything</string>
    <string name="mozo_backup_title">Backup Wallet</string>
    <string name="mozo_backup_sub_title">This is your Recovery Phrase</string>
    <string name="mozo_backup_content">Please write it down on paper and keep it in a safe place as you would with money</string>
    <string name="mozo_backup_warning">If you lose your Recovery Phrase, your wallet cannot be recovered.</string>
    <string name="mozo_backup_confirm_msg">I have safely stored Recovery Phrase</string>
    <string name="mozo_backup_sub_title_verify">Verify</string>
    <string name="mozo_backup_content_verify">Using the completed Recovery Phrase as a reference, please enter the following words from your Recovery Phrase to complete the back up process.</string>
    <string name="mozo_backup_success_title">Your wallet is backed up</string>
    <string name="mozo_backup_success_content">Be sure to store your recovery phrase in a secure place. If this app is deleted, your wallet cannot be recovered without it.</string>
    <string name="mozo_backup_confirm_failed">Invalid Recovery Phrase</string>
    <string name="mozo_convert_title">Convert To Mozo</string>
    <string name="mozo_convert_amount_hint">Enter amount of MozoX to convert to Mozo</string>
    <string name="mozo_convert_gas_limit" translatable="false">Gas limit</string>
    <string name="mozo_convert_gas_price" translatable="false">Gas price</string>
    <string name="mozo_convert_slow">Slow</string>
    <string name="mozo_convert_normal">Normal</string>
    <string name="mozo_convert_fast">Fast</string>
    <string name="mozo_convert_explain">Gas Price is the amount you pay per unit of gas. <b>TX fee = Gas Used by Txn * Gas Price</b> &amp; is paid to miners for including your TX in a block. Higher the gas price = faster transaction, but more expensive.</string>
    <string name="mozo_convert_from_on_chain">From Onchain</string>
    <string name="mozo_convert_to_off_chain">To Offchain</string>
    <string name="mozo_convert_submit_broadcast_title">Broadcast completed</string>
    <string name="mozo_convert_submit_broadcasting_title">Broadcasting transaction…</string>
    <string name="mozo_convert_submit_broadcasting_content">It’s might take about <b>3 minutes</b> to complete</string>
    <string name="mozo_convert_submit_hide_explain">When you hide this screen, you will receive notify when transaction <b>complete</b> or <b>fail</b>.</string>
    <string name="mozo_convert_submit_waiting_title">Waiting for transaction status…</string>
    <string name="mozo_convert_submit_success_title">Convert Successful</string>
    <string name="mozo_convert_submit_success_content">You have just converted <b>MozoX</b> to <b>Mozo</b>:</string>
    <string name="mozo_convert_submit_fail_title">Convert Failed</string>
    <string name="mozo_convert_submit_fail_content">Cannot convert from <b>MozoX</b> to <b>Mozo</b>.\n\nPlease try again later.</string>
    <string name="mozo_convert_on_in_off_detected">&lt;b>Detected %s MozoX in Onchain wallet&lt;/b>&lt;br/>Do you want to convert these MozoX in this wallet into Mozo?</string>
    <string name="mozo_convert_on_in_off_converting">&lt;b>Converting to Mozo…&lt;/b></string>
    <string name="mozo_convert_on_in_off_warning">Your ETH balance is: &lt;b>%1$s&lt;/b>&lt;br/>You need to transfer &lt;b>%2$s ETH&lt;/b> into this Onchain Wallet address to pay TX Fee</string>
    <string name="mozo_convert_on_in_off_eth_balance">Your ETH balance is: &lt;b>%s&lt;/b></string>
    <string name="mozo_create_wallet_title">Create Mozo Wallet</string>
    <string name="mozo_create_wallet_select_method">You want:</string>
    <string name="mozo_create_wallet_have_another_account">Already have another Mozo account? %s</string>
    <string name="mozo_create_wallet_auto_section">Create Wallet Automatically</string>
    <string name="mozo_create_wallet_auto_explain">Your Recovery Phrase* and security PIN will be auto generated and remembered by our system.</string>
    <string name="mozo_create_wallet_manual_section">Create Wallet Manually</string>
    <string name="mozo_create_wallet_manual_explain">Please back up your Recovery Phrase by clicking on \"Settings\" and \"Backup Wallet\" menu</string>
    <string name="mozo_create_wallet_hint_explain_title">*What are Recovery Phrase?</string>
    <string name="mozo_create_wallet_hint_explain">Recovery Phrase are random set of words used to secure your digital wallet. You should write down these words in order so that in the event you lose your digital wallet of forget your PIN, you can recover your wallet and/or reset your PIN.</string>
    <string name="mozo_create_wallet_creating">Creating your Mozo wallet…</string>
    <string name="mozo_clear_cache">Clear Cache: %s</string>
    <string name="mozo_view_address_title">Your Mozo Wallet Address</string>
    <string name="mozo_view_text_hint">Loading…</string>
    <string name="mozo_view_text_login_require_prefix">You must</string>
    <string name="mozo_view_text_login_require_btn"><u>Login</u></string>
    <string name="mozo_view_text_login_require_suffix">to use this function</string>
</resources>