<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="@string/tag_login_require">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mozo_view_text_login_require_prefix"
        android:textColor="@color/mozo_color_un_active"
        android:textSize="13sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/mozo_view_text_login_require_btn"
        android:textColor="@color/mozo_color_primary"
        android:textSize="13sp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mozo_view_text_login_require_suffix"
        android:textColor="@color/mozo_color_un_active"
        android:textSize="13sp"
        android:textStyle="italic" />

</LinearLayout>