<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.biglabs.mozo.sdk.ui.widget.MozoToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:buttonClose="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:title="@string/mozo_backup_title" />

    <TextView
        android:id="@android:id/text1"
        style="@style/MozoTheme.SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/mozo_backup_sub_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@android:id/text2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mozo_screen_padding"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/mozo_screen_padding"
        android:gravity="center"
        android:text="@string/mozo_backup_content"
        android:textColor="@color/mozo_color_title"
        android:textSize="@dimen/mozo_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@android:id/text1" />

    <TextView
        android:id="@android:id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mozo_screen_padding"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/mozo_screen_padding"
        android:gravity="center"
        android:text="@string/mozo_backup_warning"
        android:textColor="@color/mozo_color_error"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@android:id/text2" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/mozo_color_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/seed_view" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/seed_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mozo_screen_padding"
        android:layout_marginEnd="@dimen/mozo_screen_padding"
        android:padding="12dp"
        app:alignContent="space_around"
        app:alignItems="center"
        app:flexWrap="wrap"
        app:justifyContent="space_around"
        app:layout_constraintBottom_toTopOf="@id/button_stored_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@android:id/message"
        app:layout_constraintVertical_bias="0.2"
        tools:layout_height="50dp" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/mozo_color_line"
        app:layout_constraintBottom_toBottomOf="@id/seed_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/button_stored_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mozo_screen_padding"
        android:layout_marginEnd="@dimen/mozo_screen_padding"
        android:layout_marginBottom="21dp"
        android:button="@drawable/mozo_dr_btn_check"
        android:paddingStart="9dp"
        android:paddingEnd="5dp"
        android:text="@string/mozo_backup_confirm_msg"
        android:textColor="@drawable/mozo_color_radio_text"
        android:textSize="@dimen/mozo_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mozo_screen_padding"
        android:layout_marginEnd="@dimen/mozo_screen_padding"
        android:layout_marginBottom="30dp"
        android:enabled="false"
        android:text="@string/mozo_button_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>